--- a/rime_mint.dict.yaml
+++ b/rime_mint.dict.yaml
@@ -12,15 +12,14 @@ import_tables:
   - dicts/rime_ice.ext           # 雾凇拼音 扩展词库
   - dicts/other_kaomoji          # 颜文字表情（按`VV`呼出)
   - dicts/rime_ice.others        # 雾凇拼音 others词库（用于自动纠错）
-  - dicts/associational          # 对万象拼音词库进行导入
-  - dicts/base
+  - dicts/base                   # 对万象拼音词库进行导入
   - dicts/chars
   - dicts/compatible
   - dicts/corrections
   - dicts/correlation
-  - dicts/people
   - dicts/place
-  - dicts/poetry                 # 万象拼音导入完成
+  - dicts/poetry
+  - dicts/suggestion             # 万象拼音导入完成
   # 20240608 Emoji完全交由OpenCC，不再使用字典作为补充
   # - dicts/other_emoji            # Emoji(仅仅作为补充，实际使用一般是OpenCC生效)
 ...
